# opengl

./: .gitignore  CMakeLists.txt  README.md
3rd/Includes/glad/: glad.c  glad.h
3rd/Libs/: assimp-vc143-mtd.lib  glfw3.lib
OpenGL_helper/: OpenGL_function_helper.md
Project1/: Project1.sln
Project1/Project1/: 2.2.basic_lighting.vs  4.4.lighting_maps.fs  6.3.coordinate_systems.fs  Project1.vcxproj  Project1.vcxproj.filters  camera.h  shader_m.h  shader_s.h  源10.cpp  源11.cpp  源13.cpp  源14.cpp  源15.cpp  源3.cpp  源4.cpp  源5.cpp  源6.cpp  源7.cpp  源8.cpp
Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.cpp  model.h
src/Shaders/: 4.2.lighting_maps.fs  4.2.texture.fs  4.normal_mapping.fs
